--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-filter = "^25.1"
 Markdown = "^3.7"
 pillow = "^11.1.0"
 djangorestframework-simplejwt = "^5.5.0"
+django-cors-headers = "^4.7.0"
 
 [tool.poetry.dev-dependencies]
 
