--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ Markdown = "^3.7"
 pillow = "^11.1.0"
 djangorestframework-simplejwt = "^5.5.0"
 django-cors-headers = "^4.7.0"
+python-dotenv = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
